managed/lab/components/playground/base/deploy-playground-nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-nginx
  namespace: lab
spec:
  selector:
    matchLabels:
      app: lab
      component: playground
      container: nginx
  replicas: 2
  template:
    metadata:
      labels:
        app: lab
        component: playground
        container: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports: 
            - containerPort: 80
