managed/lab/components/playground/base/deploy-playground-simple-web.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playground-simple-web
  namespace: lab
spec:
  selector:
    matchLabels:
      app: lab
      component: playground
      container: simple-web
  replicas: 2
  template:
    metadata:
      labels:
        app: lab
        component: playground
        container: simple-web
    spec:
      containers:
        - name: simple-web
          image: yeasy/simple-web:latest
          ports: 
            - containerPort: 80
