managed/lab/components/playground/base/svc-playground-nginx-root.yaml
---
kind: "Service"
apiVersion: "v1"
metadata:
  name: "playground-nginx-root"
  namespace: lab
spec:
  ports:
    - name: "root"
      protocol: "TCP"
      port: 8080
